# OptiConv

./: CMakeLists.txt  Doxyfile  README.md
cli/: main.c
include/: imgproc_filters.h  imgproc_types.h
src/: imgproc_core.c  imgproc_filters.c  imgproc_io.c  utils.c
tests/: test_core.c  test_filters.c  test_io.c
